--- a/plop-templates/component/component.hbs
+++ b/plop-templates/component/component.hbs
@@ -4,7 +4,7 @@ export type Props = {};
 
 const {{pascalCase name}} = (props:Props) => {
     return (
-        <div className={classes["{{pascalCase name}}"]}>
+        <div className={classes["component-style"]}>
             {{pascalCase name}}
         </div>
     );
