--- a/src/components/Layout/Header/Header.module.scss
+++ b/src/components/Layout/Header/Header.module.scss
@@ -6,11 +6,14 @@
   box-shadow: 0px 0px 20px rgba(119, 123, 130, 0.26);
   z-index: 10;
   position: relative;
+  height: 90px;
+  display: flex;
+  align-items: center;
 
   .user {
     display: flex;
     align-items: center;
-    margin-right: 50px;
+    justify-content: flex-end;
 
     .user-info {
       display: flex;
@@ -72,7 +75,7 @@
       background: #d5b9a7;
       position: absolute;
       top: 0;
-      left: 26%;
+      left: 20%;
     }
   }
 
